# BetterQuestingTools

./: .gitignore  .ignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: coverage.yml
samples/: links.txt
src/: db.rs  error.rs  importance.rs  lib.rs  main.rs  model.rs  model_raw.rs  nbt_norm.rs  parser.rs  quest_id.rs
tests/: db_parse.rs  graphviz_snapshot.rs  importance_snapshot.rs  importance_tests.rs  parse_samples.rs
tests/snapshots/: graphviz_snapshot__quest_graph_dot_snapshot.snap  importance_snapshot__importance_on_db_snapshot.snap
