[package]
name = "better_questing_tools"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
glob = "0.3"
anyhow = "1.0"
insta = {version="1.46", features = ["json"]}
zip = "8.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3